src/test/ui/retslot-cast.stderr
error[E0308]: mismatched types
  --> $DIR/retslot-cast.rs:13:5
   |
LL |     inner(x)
   |     ^^^^^^^^ expected trait `Iterator<Item = ()>`, found trait `Iterator<Item = ()> + Send`
   |
   = note: expected type `Option<&dyn Iterator<Item = ()>>`
              found type `Option<&dyn Iterator<Item = ()> + Send>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
